tests/integration/count/item_not_in_aggregate.mets
init do
    `insert into users (id, age) values (1, 10), (2, 20), (3, 30), (4, 40), (5, 50), (6, 60)`
end

process do
    `select count(*), id from users`
end
